Fix di alcuni comportamenti relativi alle scrollbar e eliminazione di State non utilizzati

--- a/frontend/public/e-uscito-joypad.css
+++ b/frontend/public/e-uscito-joypad.css
@@ -22,7 +22,7 @@ body {
     font-family: "Montserrat", sans-serif;
     text-align: left;
     background-color: #f7f7f8;
-    width: 100vw;
+    width: 100%;
 }
 
 /* header {
